--- a/Energy.App.Standalone/Features/Analysis/HistoricalAnalysisCard.razor
+++ b/Energy.App.Standalone/Features/Analysis/HistoricalAnalysisCard.razor
@@ -4,7 +4,7 @@
 <MudCard Elevation="2">
         
     <MudCardContent>
-        <MudPaper Class="d-flex flex-column flex-grow-1 m-1" Elevation="0">
+        <MudPaper Class="d-flex flex-column flex-grow-1 ma-1" Elevation="0">
             <MudText Typo="Typo.h5">@_headerText</MudText>
 
             <MudText Typo="Typo.caption">@_rangeText</MudText>
