--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/EditTariffForm.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/EditTariffForm.razor
@@ -49,7 +49,7 @@
 
     <MudPaper Elevation="0" Class="d-flex justify-end">
         <MudSpacer></MudSpacer>
-        <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary" Class="m-2">@_buttonText</MudButton>
+        <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary" Class="ma-2">@_buttonText</MudButton>
     </MudPaper>
 </EditForm>
 
