--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationPage.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationPage.razor
@@ -11,7 +11,7 @@
             <MudTooltip ShowOnHover="true" Text="Return to Setup">
                 <MudLink Underline="Underline.None"
                          Href="@($"/Setup")">
-                    <MudButton Class="m-1" Color="Color.Primary"
+                    <MudButton Class="ma-1" Color="Color.Primary"
                                ButtonType="ButtonType.Button"
                                Variant="Variant.Filled"
                                Size="Size.Small"
