--- a/Energy.App.Standalone/Features/Setup/SetupPage.razor
+++ b/Energy.App.Standalone/Features/Setup/SetupPage.razor
@@ -12,7 +12,7 @@
     <MudItem xs="12">
         <div class="d-flex justify-content-end align-items-baseline">
             <MudText Typo="Typo.h4" Align="Align.Center" Class="mt-3 mx-auto eme-focus">App Setup</MudText>
-            <MudIconButton Class="m-0"
+            <MudIconButton Class="ma-0"
                            ButtonType="ButtonType.Button"
                            Size="Size.Small"
                            Variant="Variant.Outlined"
