--- a/Energy.App.Standalone/PageComponents/AnalysisOptionsTable.razor
+++ b/Energy.App.Standalone/PageComponents/AnalysisOptionsTable.razor
@@ -1,6 +1,6 @@
 ﻿@inherits FluxorComponent
 
-<MudText Align="Align.Left" Typo="Typo.h5" Class="m-3 fw-bolder">Analysis Options Status</MudText>
+<MudText Align="Align.Left" Typo="Typo.h5" Class="ma-3 fw-bolder">Analysis Options Status</MudText>
 <MudTable Items="AnalysisOptions.Value.All" Elevation="0">
     <HeaderContent>
         <MudTh Class="fw-bold">
