--- a/Energy.App.Standalone/Pages/Index.razor
+++ b/Energy.App.Standalone/Pages/Index.razor
@@ -16,7 +16,7 @@
             <MudPaper Elevation="0" Class="p-2 mt-3 d-flex justify-content-end align-items-baseline">
                 <MudText Typo="Typo.h4" Align="Align.Center" Class="mx-auto eme-focus">Welcome to Explain My Energy</MudText>
 
-                <MudButton Class="m-0"
+                <MudButton Class="ma-0"
                            OnClick="@((c) => { OpenWizard = true; return Task.CompletedTask; })"
                            Size="Size.Small"
                            ButtonType="ButtonType.Button"
@@ -30,7 +30,7 @@
 
         <MudItem xs="12">
             <MudPaper Elevation="2" Class="p-2">
-                <MudText Typo="Typo.h5" Class="m-4 fw-bolder">App Setup Status</MudText>
+                <MudText Typo="Typo.h5" Class="ma-4 fw-bolder">App Setup Status</MudText>
                 <AppSetupStatus />
             </MudPaper>
         </MudItem>
