--- a/Energy.App.Standalone/Features/Setup/Weather/Pages/WeatherDataInfo.razor
+++ b/Energy.App.Standalone/Features/Setup/Weather/Pages/WeatherDataInfo.razor
@@ -3,7 +3,7 @@
 @inject IState<HouseholdState> HouseholdState
 @inject IDispatcher Dispatcher
 
-<div class="d-flex justify-space-between align-items-baseline">
+<div class="d-flex justify-space-between align-baseline">
     <MudPaper Class="d-flex ma-3" Elevation="0">
         <MudText Typo="Typo.h5" Class=" fw-bolder">Weather Data Status</MudText>
     </MudPaper>
