--- a/Energy.App.Standalone/Pages/SetupWizard/Steps/StepTemplate.razor
+++ b/Energy.App.Standalone/Pages/SetupWizard/Steps/StepTemplate.razor
@@ -20,7 +20,9 @@
 
         </MudItem>
         <MudItem xs="12">
+            <div class="d-flex justify-center">
             @ActionButtons
+            </div>
         </MudItem>
     </MudGrid>
 </MudPaper>
