--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationPage.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationPage.razor
@@ -20,7 +20,7 @@
             </MudTooltip>
             @if (ParametersSet)
             {
-                <MeterAuthorizationFormComponent 
+                <MeterAuthorizationFormComponent FreshNavigation="true"
                     MeterType="MeterType" OnSuccessfulCallback="OnSuccessfulCallback" />
             }
         </MudPaper>
