--- a/Energy.App.Standalone/Pages/SetupWizard/Steps/ElectricityMeterStep.razor
+++ b/Energy.App.Standalone/Pages/SetupWizard/Steps/ElectricityMeterStep.razor
@@ -1,3 +1,4 @@
+@inherits FluxorComponent
 <StepTemplate CloseWizardCallback="CloseWizardCallback" BreadcrumbItems="BreadcrumbItems">
     <SetupStepPage>
         <AddElectricityMeterFormComponent  />
@@ -5,14 +6,39 @@
     </SetupStepPage>
     <ActionButtons>
             
+        <div class="d-flex justify-end px-4">
+
+            <div class="mx-auto">
+                <MudButton Size="Size.Medium"
+                           Variant="Variant.Outlined"
+                           StartIcon="fa-solid fa-arrow-left"
+                           Color="Color.Default"
+                           OnClick="GoBackCallback">
+                    Back
+                </MudButton>
+                <MudButton Size="Size.Medium"
+                           Variant="Variant.Outlined"
+                           EndIcon="fa-solid fa-arrow-right"
+                           Color="Color.Default"
+                           Style="@(CanMoveNext ? "display: none" : "")"
+                           OnClick="SkipToDone">
+                    Skip
+                </MudButton>
+
+                <MudButton Size="Size.Medium"
+                           Variant="Variant.Outlined"
+                           EndIcon="fa-solid fa-arrow-right"
+                           Disabled="@(!CanMoveNext)"
+                           Color="Color.Success"
+                           OnClick="GoToNextStageCallback">
+                    Authorize
+                </MudButton>
+            </div>
+            <MudButton Class="me-0" Color="Color.Default" OnClick="CloseWizardCallback">Exit</MudButton>
+        </div>
 
 
-            <MudButton Color="Color.Default" OnClick="GoBackCallback">Back</MudButton>
 
-        <MudButton Color="Color.Default" OnClick="CloseWizardCallback">Close</MudButton>
-            <MudButton Style="@(CanMoveNext ? "display: none" : "")" Color="Color.Default" OnClick="SkipToDone">Skip</MudButton>
-
-        <MudButton Disabled="@(!CanMoveNext)" Color="Color.Primary" OnClick="GoToNextStageCallback">Authorize</MudButton>
 
     </ActionButtons>
 </StepTemplate>
