--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationFormComponent.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationFormComponent.razor
@@ -1,30 +1,56 @@
 @inherits FluxorComponent
+
+
 @inject IDispatcher Dispatcher
 
 @if (ParametersSet)
 {
-    <MudCard Elevation="0">
+    <MudCard id="authorization-scroll-top" Elevation="0" Style="height: fit-content; overflow: auto;">
         <MudCardHeader>
             <MudText Typo="Typo.h6">@MeterType Meter Authorization</MudText>
         </MudCardHeader>
-        <MudCardContent Style="height: auto;
-                                       min-height: 100%;">
+        <MudCardContent Style="height: 100%;">
 
             <div class="mb-1">
-                <MudTextField Label="@MpxnLabel" Value="@MeterSetupState.Value[MeterType].Mpxn" ReadOnly="true"></MudTextField>
-                <MudTextField Label='IHD MAC ID' Value="@HouseholdState.Value.IhdMacId" ReadOnly="true"></MudTextField>
-                <MudTextField Label='Move-in Date' Value="@MoveInDateString" ReadOnly="true"></MudTextField>
+
+                <CopyToClipboardTextField CopyString="@MeterSetupState.Value[MeterType].Mpxn">
+                    <MudTextField T="string"
+                                  Label="@MpxnLabel"
+                                  ReadOnly="true"
+                                  Value="@MeterSetupState.Value[MeterType].Mpxn"></MudTextField>
+                </CopyToClipboardTextField>
+
+
+                <CopyToClipboardTextField CopyString="@HouseholdState.Value.IhdMacId">
+                    <MudTextField T="string"
+                                  Label="IHD MAC ID"
+                                  ReadOnly="true"
+                                  Value="@HouseholdState.Value.IhdMacId"></MudTextField>
+
+                </CopyToClipboardTextField>
+                <CopyToClipboardTextField CopyString="@MoveInDateString">
+                    <MudTextField T="string"
+                                  Label="Move-in Date"
+                                  ReadOnly="true"
+                                  Value="@MoveInDateString"></MudTextField>
+                </CopyToClipboardTextField>
             </div>
-            <div class="mb-1">
-                <MudButton OnClick="OnCheckAuthorizationClicked" Variant="Variant.Filled" hidden="@AuthorizeSucceeded">Confirm Authorization</MudButton>
+            <div class="d-flex justify-center p-3">
+                <MudButton 
+                    OnClick="OnCheckAuthorizationClicked" 
+                    Variant="Variant.Filled" hidden="@AuthorizeSucceeded">Confirm Authorization</MudButton>
+            </div>
+            <div class="d-flex justify-end">
+                <MudLink Href="https://data.n3rgy.com/consumer-sign-up" Target="_blank" Underline="Underline.Hover" hidden="@AuthorizeSucceeded">Open Sign-up in a separate tab <i class="fa-solid fa-external-link" aria-hidden="true"></i></MudLink>
             </div>
 
 
             <div id="authorizationSuccess" class="mt-2" hidden="@(!AuthorizeSucceeded)">
 
                 <MudText Color="Color.Success" Typo="Typo.h5">Authorized</MudText>
-                
-                @if (ReadingsLoading) {
+
+                @if (ReadingsLoading)
+                {
                     <MudText>Your @MeterType meter data is now being processed</MudText>
                 }
             </div>
@@ -34,11 +60,9 @@
                 <p>We could not access your smart meter data - have you completed the authorization process with n3rgy?</p>
                 <p>n3rgy responded with: @AuthorizeFailedMessage</p>
             </div>
-
-            <iframe id="n3rgy-iframe" src="https://data.n3rgy.com/consumer-sign-up" style="width: 100%; height: 1000px;" hidden="@AuthorizeSucceeded"></iframe>
-
+            
+            <iframe id="n3rgy-iframe" src="https://data.n3rgy.com/consumer-sign-up" class="my-3" style="width: 100%; height: calc(80vh - 100px); border: 1px solid black;" hidden="@AuthorizeSucceeded"></iframe>
         </MudCardContent>
-        <MudCardActions>
-        </MudCardActions>
+        
     </MudCard>
 }
