--- a/Energy.App.Standalone/Pages/HtmlContentFiles/WelcomeScreenContent.razor
+++ b/Energy.App.Standalone/Pages/HtmlContentFiles/WelcomeScreenContent.razor
@@ -1,10 +1,9 @@
 ﻿@using Energy.App.Standalone.Features.Setup.TermsAndConditions
-@inherits FluxorComponent
-@inject IDispatcher Dispatcher
+@using Energy.App.Standalone.Pages.HtmlContentFiles
 
 <MudPaper Class="pa-5">
 <MudText Typo="Typo.body1" Align="Align.Start" >
-    <p ><strong>Explain my Energy</strong> is a free, open-source tool to help you understand both your existing energy bills and your future energy costs and consumption.</p>
+    <p ><strong>Explain My Energy</strong> is a free, open-source tool to help you understand both your existing energy bills and your future energy costs and consumption.</p>
     <p >It is designed to be used by anyone, as long as you have a smart meter (it doesn't even have to be working).</p>
     <p >The application uses your historical energy usage, your energy tariff details and local weather data to give you:</p>
     <ul class="ml-3">
@@ -15,25 +14,23 @@
 
     <br />
 
-    <p><strong>Explain my Energy</strong> doesn't sell energy; doesn't sell your data; it doesn't collect your data.</p>
+    <p><strong>Explain My Energy</strong> doesn't sell energy; doesn't sell your data; it doesn't collect your data.</p>
     <p >There is no sign up, no login, no cookies, no tracking, no ads.</p>
     <p >It uses the latest web browser technology to store and process everything on your device. </p>
 
-    <p>This is an initial <strong>beta version</strong> of the application. Feedback is much appreciated and will help determine whether the app provides enough value to warrant maintaining and developing further. Advancements in AI offer interesting possibilities - tailored energy advice unique to each individual and their home, for example.</p>
-    <p>So please feel free to email me at <a href="mailto:explainmyenergy@duck.com">explainmyenergy@duck.com</a> with any problems, comments or suggestions.</p>
+    <p>This is an initial <strong>beta version</strong> of the application. Feedback is much appreciated and will help determine whether the app provides enough value to warrant maintaining and developing further.</p>
+    <p> Advancements in AI offer interesting possibilities - tailored energy advice unique to each individual and their home, for example.</p>
+    <p>So please feel free to email me at <a href="mailto:explainmyenergy@solores-software.net">explainmyenergy@solores-software.net</a> with any problems, comments or suggestions.</p>
 
-
-    <br />
-    <br />
-    <p >To begin using <strong>Explain my Energy</strong>, please check the <MudLink OnClick="ShowTermsDialog">Terms &amp; Conditions</MudLink></p>
-    <p>The privacy policy is also available <MudLink OnClick="ShowPrivacyDialog">here</MudLink>.</p>
-    <MudCheckBox T="bool" TriState="false" Checked="TermsAccepted" CheckedChanged="OnTermsAcceptChange" >I accept the Terms &amp; Conditions</MudCheckBox>
+    <p ><strong>Explain My Energy's</strong> Terms &amp; Conditions can be viewed here: <MudLink OnClick="ShowTermsDialog">Terms &amp; Conditions</MudLink></p>
+    <p>By using this application, you acknowledge that you agree to these terms.</p>
+    <p>The Privacy Policy is also available here: <MudLink OnClick="ShowPrivacyDialog">Privacy Policy</MudLink></p>
 
 
     <MudDialog @bind-IsVisible="TermsDialogVisible" Options="DialogOptions" ClassActions="d-flex justify-center">
 
         <DialogContent>
-            <TermsAndConditionsPage />
+            <TermsAndConditionsContents />
         </DialogContent>
         <DialogActions>
             <MudButton Variant="Variant.Filled" Size="Size.Large" Color="Color.Default" OnClick="CloseTermsDialog">Close</MudButton>
@@ -43,7 +40,7 @@
     <MudDialog @bind-IsVisible="PrivacyDialogVisible" Options="DialogOptions" ClassActions="d-flex justify-center">
 
         <DialogContent>
-            <PrivacyPolicyPage />
+            <PrivacyPolicyContents />
         </DialogContent>
         <DialogActions>
             <MudButton Variant="Variant.Filled" Size="Size.Large" Color="Color.Default" OnClick="ClosePrivacyDialog">Close</MudButton>
@@ -59,16 +56,6 @@
 </MudPaper>
 @code {
 
-    [Inject] IState<TermsAndConditionsState> TermsAndConditionsState { get; set; }
-
-
-    bool TermsAccepted => TermsAndConditionsState.Value.Accepted;
-
-    private void OnTermsAcceptChange(bool isChecked)
-    {
-        Dispatcher.Dispatch(new AcceptTermsAndConditionsAction(isChecked));
-    }
-
 
     bool TermsDialogVisible;
     void CloseTermsDialog() => TermsDialogVisible = false;
@@ -79,7 +66,6 @@
             MaxWidth = MaxWidth.Medium,
             CloseOnEscapeKey = true,
             CloseButton = true
-
         };
 
     bool PrivacyDialogVisible;
