--- a/Energy.App.Standalone/Pages/SetupWizard/Steps/ElectricityAuthorizationStep.razor
+++ b/Energy.App.Standalone/Pages/SetupWizard/Steps/ElectricityAuthorizationStep.razor
@@ -1,17 +1,40 @@
+@inherits FluxorComponent
 <StepTemplate CloseWizardCallback="CloseWizardCallback" BreadcrumbItems="BreadcrumbItems">
     <SetupStepPage>
-        <MeterAuthorizationFormComponent MeterType="MeterType.Electricity" />
+        <MeterAuthorizationFormComponent MeterType="MeterType.Electricity" FreshNavigation="true" />
 
     </SetupStepPage>
     <ActionButtons>
-            
+        <div class="d-flex justify-end px-4">
 
+            <div class="mx-auto">
+                <MudButton Size="Size.Medium"
+                           Variant="Variant.Outlined"
+                           StartIcon="fa-solid fa-arrow-left"
+                           Color="Color.Default"
+                           OnClick="GoBackCallback">
+                    Back
+                </MudButton>
+                <MudButton Size="Size.Medium"
+                           Variant="Variant.Outlined"
+                           EndIcon="fa-solid fa-arrow-right"
+                           Color="Color.Default"
+                           Style="@(CanMoveNext ? "display: none" : "")"
+                           OnClick="SkipToDone">
+                    Skip
+                </MudButton>
 
-        <MudButton Color="Color.Default" OnClick="CloseWizardCallback">Close</MudButton>
-            <MudButton Color="Color.Default" OnClick="GoBackCallback">Back</MudButton>
-        <MudButton Style="@(CanMoveNext ? "display: none" : "")" Color="Color.Default" OnClick="SkipToDone">Skip</MudButton>
-            \
-        <MudButton Disabled="@(!CanMoveNext)" Color="Color.Primary" OnClick="GoToNextStageCallback">Next</MudButton>
+                <MudButton Size="Size.Medium"
+                           Variant="Variant.Outlined"
+                           EndIcon="fa-solid fa-arrow-right"
+                           Disabled="@(!CanMoveNext)"
+                           Color="Color.Success"
+                           OnClick="GoToNextStageCallback">
+                    Next
+                </MudButton>
+            </div>
+            <MudButton Class="me-0" Color="Color.Default" OnClick="CloseWizardCallback">Exit</MudButton>
+        </div>
 
     </ActionButtons>
 </StepTemplate>
@@ -19,7 +42,7 @@
 @code {
     [Inject] IState<MeterSetupState> MeterSetupState { get; set; }
 
-    bool CanMoveNext => MeterSetupState.Value[MeterType.Gas].Authorized;
+    bool CanMoveNext => MeterSetupState.Value[MeterType.Electricity].Authorized;
 
     [Parameter, EditorRequired] public List<BreadcrumbItem> BreadcrumbItems { get; set; }
 
