License generation (nuget)

--- a/Energy.App.Standalone/Shared/MainLayout.razor
+++ b/Energy.App.Standalone/Shared/MainLayout.razor
@@ -8,7 +8,7 @@
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         <a href="/" style="text-decoration: none; color: inherit;"><MudText Typo="Typo.h5" Class="ml-3" Style="width: max-content;">Explain My Energy</MudText></a>
         <MudSpacer />
-        <MudNavLink Icon="@Icons.Custom.Brands.GitHub" Href="https://github.com/zola-25/Explain-My-Energy"></MudNavLink>
+        <MudNavLink Icon="@Icons.Custom.Brands.GitHub" Class="menu-nav-item" IconColor="Color.Inherit" Href="https://github.com/zola-25/Explain-My-Energy" Style="max-width: fit-content"></MudNavLink>
 
         <MudNavLink Class="menu-nav-item" Href="/About" ActiveClass="menu-nav-item-active" Match="NavLinkMatch.Prefix" Style="max-width: fit-content;">
             <MudText Align="Align.Start" Typo="Typo.h6" >About</MudText>
